# sdl_game

./: .camera.cpp.swp  .game.h.swp  .gitignore  .tile.cpp.swp  .tile.h.swp  CMakeLists.txt  README.md  camera.cpp  camera.h  character.cpp  character_factory.cpp  character_factory.h  dirt_tile.cpp  dirt_tile.h  game  game.cpp  game.h  log.txt  main.cpp  makefile  notes.h  npc.h  one_tile.cpp  one_tile.h  tile.h  tile_factory.cpp  tile_factory.h  tile_map.cpp  two_tile.cpp  two_tile.h  water_tile.cpp
camera/: camera.cpp  camera.h
game/: game
menu/: main_menu.cpp  main_menu.h  menu.h  menu_background.cpp  menu_background.h  menu_element.h
src/: button.cpp  button.h  character.h  character_factory.h  game.cpp  game.h  game_global.h  gameplay.cpp  gameplay.h  logger.cpp  logger.h  main.cpp  main_menu.cpp  main_menu.h  npc.cpp  player.cpp  rectangle.cpp  rectangle.h  text.cpp  text.h  tile.h  tile_map.cpp  tile_map.h  water_tile.h
src/camera/: camera.cpp  camera.h
src/character/: player.h
src/menu/: main_menu.h  menu_background.cpp  menu_background.h  menu_button.h
src/tile/: dirt_tile.cpp  tile.cpp  tile_factory.cpp  tile_map.cpp  tile_map.h  water_tile.cpp
test/: game_test.cpp
tile/: dirt_tile.cpp  water_tile.h
